refactor: Addressed warnings related to same return value